force-app/main/default/objects/Account/fields/ampi__IATI_Activity_XML_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Activity_XML_Error_Log__c</fullName>
    <description>URL field to store the public link of the ContentVersion of the IATI Activities Standard XML's error log after validation. This is populated by code (IATI Activity classes).</description>
    <label>IATI Activity XML Error Log</label>
    <type>Url</type>
</CustomField>