force-app/main/default/objects/Account/fields/ampi__IATI_Activity_XML_Link__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Activity_XML_Link__c</fullName>
    <description>URL field to store the public link of the ContentVersion of the IATI Activity Standard XML file generated from a particular Account. This is populated by the trigger IATIActivityXML_V1.</description>
    <label>IATI Activity XML Link</label>
    <type>Url</type>
</CustomField>