force-app/main/default/objects/Account/fields/ampi__IATI_Organisation_XML_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Organisation_XML_Error_Log__c</fullName>
    <description>URL field to store the public link of the ContentVersion of the IATI Organisation Standard XML's error log after validation. This is populated by code (IATI Organisation classes).</description>
    <label>IATI Organisation XML Error Log</label>
    <type>Url</type>
</CustomField>