force-app/main/default/objects/Account/fields/ampi__IATI_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Organization_Type__c</fullName>
    <description>This picklist field specifies the organization type, per IATI reporting standards.</description>
    <inlineHelpText>Select the organization type</inlineHelpText>
    <label>IATI Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Other Public Sector</fullName>
            </value>
            <value>
                <fullName>International NGO</fullName>
            </value>
            <value>
                <fullName>National NGO</fullName>
            </value>
            <value>
                <fullName>Regional NGO</fullName>
            </value>
            <value>
                <fullName>Partner Country based NGO</fullName>
            </value>
            <value>
                <fullName>Public Private Partnership</fullName>
            </value>
            <value>
                <fullName>Multilateral</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
            <value>
                <fullName>Private Sector in Provider Country</fullName>
            </value>
            <value>
                <fullName>Private Sector in Aid Recipient Country</fullName>
            </value>
            <value>
                <fullName>Private Sector in Third Country</fullName>
            </value>
            <value>
                <fullName>Academic, Training and Research</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>