force-app/main/default/objects/Account/fields/ampi__IATI_Organization_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Organization_Type_Code__c</fullName>
    <description>The formula field returns the IATI code that corresponds to the organization type, as identified in ampi__IATI_Organization_Type__c. This value is printed in all @ref attributes for organizations in both the IATI Activity and IATI Organization XMLs.</description>
    <formula>CASE(ampi__IATI_Organization_Type__c,
"Government",10,
"Local Government",11,
"Other Public Sector",15, 
"International NGO",21,
"National NGO",22,
"Regional NGO",23,
"Partner Country based NGO",24,
"Public Private Partnership",30,
"Multilateral",40,
"Foundation",60,
"Private Sector",70,
"Private Sector in Provider Country",71,
"Private Sector in Aid Recipient Country",72,
"Private Sector in Third Country",73,
"Academic, Training and Research",80,
"Other",90,90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identify the code that corresponds to the Organization Type</inlineHelpText>
    <label>IATI Organisation Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>