force-app/main/default/objects/Account/fields/ampi__IATI_Organization_XML_Link__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Organization_XML_Link__c</fullName>
    <description>URL field to store the public link of the ContentVersion containing the IATI Organization Standard XML file for this Account. This is populated by trigger IATIOrganizationXML_V1.</description>
    <label>IATI Organisation XML Link</label>
    <type>Url</type>
</CustomField>