force-app/main/default/objects/Account/fields/ampi__IATI_Validator_Error_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Validator_Error_Response__c</fullName>
    <description>To store the validator response so that it can be used in the code</description>
    <label>IATI Validator Error Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>