force-app/main/default/objects/Account/fields/ampi__Organization_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ampi__Organization_Identifier__c</fullName>
    <description>Text field to specify the unique identifier of the organization, per IATI standards.</description>
    <inlineHelpText>Enter the IATI Organisation Identifier here. The Identifier has format [Namespace Code]-[Base Identifier]. It should not start or end with spaces or new lines and must not contain any of the symbols /, &amp;, | or ?.</inlineHelpText>
    <label>Organisation Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>